2006-01-28  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-config.cc (load): Catch and handle exceptions if
	chroot creation fails.

	* schroot/sbuild-chroot.cc (create): Throw an exception if
	creation fails.

2006-01-28  Roger Leigh  <rleigh@debian.org>

	* configure.ac: Update maintainer email address.

	* schroot/sbuild-config.h: Remove completed TODO item.

2006-01-27  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-config.cc (class test_config): Update to use active
	argument.

	* schroot/schroot.cc (main): When loading chroot configuration,
	specify if they are active sessions or not.

	* schroot/sbuild-config.cc: All methods taking a file or directory
	name also take an "active" argument to specify if the chroots
	being loaded are active sessions or not.

2006-01-27  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-environment.h: Remove completed TODO item about
	recommending strv_delete().

2006-01-27  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-auth-conv-tty.cc: Move static data and functions
	into the unnamed namespace.

2006-01-26  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.cc (main): Only allow preservation of the user
	environment if not switching users.

	* schroot/sbuild-auth.cc (Auth, set_user): Throw exceptions rather
	than exiting on failure.
	(setupenv): Tidy up setting the environment.

2006-01-26  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-auth.cc
	(~Auth): Shut down PAM if currently active.

2006-01-26  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-keyfile.cc
	(check_priority): Add support for PRIORITY_DISALLOWED.

	* schroot/sbuild-config.cc: Convert to throw exception instead of
	immediately terminating with an error.  This makes unit testing
	possible, and errors are all caught correctly at the top-level.

	* schroot/sbuild-chroot-lvm-snapshot.cc: When reading a keyfile,
	only allow reading "lvm-snapshot-device" when restoring an active
	chroot.

	* configure.ac (AM_INIT_AUTOMAKE): Quote argument.
